--- a/server/views/createjob.ejs
+++ b/server/views/createjob.ejs
@@ -1,28 +1,32 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
     <meta charset="utf-8">
     <title>Create job</title>
-  </head>
-  <body>
-    <% if (error) { %>
-    <h2><%= error %></h2>
-    <% } %>
-    Create job
-    <form action="/createjob" method="POST">
-      <label for="title">Title: </label>
-      <input type="text" name="title" id="title" />
-      <label for="description">Description: </label>
-      <input type="text" name="description" id="description" />
-      <label for="location">Location: </label>
-      <input type="text" name="location" id="location" />
-      <label for="deadline">Deadline: </label>
-      <input type="text" name="deadline" id="deadline" />
-      <label for="contactInfo">Contact info: </label>
-      <input type="text" name="contactInfo" id="contactInfo" />
-      <label for="payment">Payment: </label>
-      <input type="text" name="payment" id="payment" />
-      <button>Submit</button>
-    </form>
-  </body>
+</head>
+<body>
+<% if (error) { %>
+<h2><%= error %></h2>
+<% } %>
+Create job
+<form action="/createjob" method="POST">
+    <label for="title">Title: </label>
+    <input type="text" name="title" id="title"/>
+    <label for="description">Description: </label>
+    <input type="text" name="description" id="description"/>
+    <label for="latitude">Latitude: </label>
+    <input type="text" name="latitude" id="latitude"/>
+    <label for="longitude">Longitude: </label>
+    <input type="text" name="longitude" id="longitude"/>
+    <label for="deadline">Deadline: </label>
+    <input type="text" name="deadline" id="deadline"/>
+    <label for="numberRequired">People required: </label>
+    <input type="text" name="numberRequired" id="numberRequired"/>
+    <label for="contactInfo">Contact info: </label>
+    <input type="text" name="contactInfo" id="contactInfo"/>
+    <label for="payment">Payment: </label>
+    <input type="text" name="payment" id="payment"/>
+    <button>Submit</button>
+</form>
+</body>
 </html>
