--- a/server/public/style.css
+++ b/server/public/style.css
@@ -194,8 +194,10 @@ body,html{
     letter-spacing:1.5px;
 }
 
-.relevance{color:#666;margin-left:15px;font-weight:500;}
-.recent,.money{color: #CCC;margin-left:80px;font-weight:500;margin-left:40px;}
+.active {color:#666;margin-left:15px;font-weight:500;}
+/*.relevance{color:#666;margin-left:15px;font-weight:500;}*/
+.inactive {color: #CCC;margin-left:80px;font-weight:500;margin-left:40px;}
+/*.recent,.money{color: #CCC;margin-left:80px;font-weight:500;margin-left:40px;}*/
 
 .recent:hover,.relevance:hover,.money:hover{color:#666;opacity:1;}
 
@@ -408,7 +410,7 @@ body,html{
 #wrapper-part-info{
     position:relative;
     width:100%;
-    height:44px;
+    height:60px;
     background-color:#FFFFFF;
     display: flex; 
 }
@@ -431,10 +433,43 @@ body,html{
     justify-content: space-between
 }
 
+.left-data {
+    text-align:left;
+    line-height:44px;
+    font-family: Helvetica, sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    font-size: 15px;
+    font-weight:400;
+    color:#666;
+    margin-left:10px;
+    height:44px;
+    flex-direction: row; 
+}
+
+.right-data {
+    display: flex; 
+    flex-direction: column; 
+}
+
 #part-info h3 {
+    text-align: right; 
+    height: calc(100% / 2); 
+    line-height: 44px;
     margin: 0px; 
     color: #6CBF65; 
     font-weight: 400; 
+}
+
+#part-info h4 {
+    text-align: right; 
+    height: calc(100% / 2); 
+    line-height: 43px; 
+    margin: 0px; 
+    font-family: Helvetica, sans-serif; 
+    font-size: 12px; 
+    font-weight: 300; 
+    
 }
 
 .part-info-image{
