Added job viewing

--- a/server/views/viewjob.ejs
+++ b/server/views/viewjob.ejs
@@ -5,13 +5,22 @@
     <title>View job</title>
 </head>
 <body>
-<%= job.title %>
-<%= job.description %>
-<%= job.deadline %>
-<%= job.numberRequired %>
-<%= job.contactInfo %>
-<%= job.payment %>
-<%= job.location.longitude %>
-<%= job.location.latitude %>
+<p>
+    Accept job
+    <form action="/acceptjob" method="POST">
+        <input type="hidden" name="id" id="id" value="<%= job._id %>"/>
+        <button>Take job</button>
+    </form>
+</p>
+<p>
+    <%= job.title %>
+    <%= job.description %>
+    <%= job.deadline %>
+    <%= job.numberRequired %>
+    <%= job.contactInfo %>
+    <%= job.payment %>
+    <%= job.location.longitude %>
+    <%= job.location.latitude %>
+</p>
 </body>
 </html>
