changed create account action

--- a/server/views/account_create.ejs
+++ b/server/views/account_create.ejs
@@ -20,7 +20,7 @@
         Register for an account
       </div>
     </h2>
-    <form class="ui large form" action="/login" method="POST">
+    <form class="ui large form" action="/account/create" method="POST">
       <div class="ui stacked segment">
         <div class="field">
           <div class="ui left icon input">
