--- a/server/views/account_create.ejs
+++ b/server/views/account_create.ejs
@@ -47,7 +47,7 @@
           </div>
         </div>
         <div class="field">
-          <select class="ui fluid dropdown">
+          <select name="usertype" class="ui fluid dropdown">
             <option value="">Type</option>
               <option value="Requester">Requester</option>
               <option value="Seeker">Seeker</option>
