--- a/server/views/account_create.ejs
+++ b/server/views/account_create.ejs
@@ -36,13 +36,13 @@
         </div>
         <div class="field">
           <div class="ui left icon input">
-            <i class="user icon"></i>
+            <i class="mail icon"></i>
             <input type="text" name="email" placeholder="E-mail address">
           </div>
         </div>
         <div class="field">
           <div class="ui left icon input">
-            <i class="user icon"></i>
+            <i class="phone icon"></i>
             <input type="text" name="phoneNumber" placeholder="(555)-132-2121">
           </div>
         </div>
