--- a/server/public/css-form/main.css
+++ b/server/public/css-form/main.css
@@ -170,6 +170,7 @@ iframe {
   border-radius: 10px;
   overflow: hidden;
   padding: 72px 55px 90px 55px;
+    margin: 15px; 
 /*    border: 1px solid #2E2D30; */
 }
 
