--- a/server/views/createjob.ejs
+++ b/server/views/createjob.ejs
@@ -9,7 +9,7 @@
 <h2><%= error %></h2>
 <% } %>
 Create job
-<form action="/createjob" method="POST">
+<form action="/job/create" method="POST">
     <label for="title">Title: </label>
     <input type="text" name="title" id="title"/>
     <label for="description">Description: </label>
