--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -286,7 +286,7 @@ function template(job) {
       <div id="wrapper-part-info">
           <div class="part-info-image"><img src="/img/new/profile-images/2.jpg" alt=""/></div>
           <div id="part-info">${job.title}
-              <div class="right-data"> <h3>&euro;${job.payment}</h3> <h4>${tSince}</h4></div>
+              <div class="right-data"> <h3>&euro;${job.payment}</h3> <h4>${tSince}, ${job.distance}km away</h4></div>
           </div>
       </div>
   </figure>`;
