Adding additional text styling to job claim confirmation (animation?)

--- a/server/public/claim-confirmed.css
+++ b/server/public/claim-confirmed.css
@@ -1,11 +1,16 @@
 h1.congrats{
 	margin-bottom: 40px;
-	margin-top: 40px;
+	margin-top: 20px;
+	font-weight: 700;
 }
 
 input.description{
 	height: 115px;
 	width: 100%;
+}
+
+p.description{
+	font-size: 22px;
 }
 
 button.submit-description{
