--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -43,7 +43,7 @@
 		</div>
 
         <div id="stripes"></div>
-        <a href="addjob.html"><button id="new-job" class="button">Add a job</button></a>
+        <a href="add-job.html"><button id="new-job" class="button">Add a job</button></a>
     </div>
 </div>
 
