--- a/server/public/add-job.css
+++ b/server/public/add-job.css
@@ -157,6 +157,20 @@ body,html{
 .logo img{width:100%;
     padding-top: 5px;}
 
+
+#profpic {
+    height: 45px; 
+    width: 45px; 
+    object-fit: cover; 
+    border-radius: 99px;
+    border: 2px solid white; 
+    float: right; 
+    position: relative; 
+    top: 8px; 
+
+}
+
+
 /*----------------------------*/
 /* SUB WHITE NAV BAR */
 /*----------------------------*/
@@ -1028,7 +1042,7 @@ body,html{
     color: white; 
     float: right; 
     margin-top: 12px; 
-    margin-right: 60px; 
+    margin-right: 30px; 
     background-color: rgba(255, 255, 255, 0); 
 }
 
@@ -1657,7 +1671,7 @@ textarea.placeholder {
     margin: 0;
     background: url(img/icon-search.svg) no-repeat 12px 7px;
     vertical-align:center;
-    margin-left:-40px;
+    margin-left:-0px;
     background-color:#FFF;
 }
 
