--- a/server/public/style.css
+++ b/server/public/style.css
@@ -688,6 +688,22 @@ body,html{
     background-color: rgba(255, 255, 255, .3); 
 }
 
+#profpic {
+    height: 45px; 
+    width: 45px; 
+    object-fit: cover; 
+    border-radius: 99px;
+    border: 2px solid white; 
+    float: right; 
+    position: relative; 
+    top: 8px; 
+
+}
+
+#profpic:hover {
+    opacity: .8; 
+}
+
 /*----------------------------*/
 /* SEARCH BOX */
 /*----------------------------*/
