--- a/server/public/style.css
+++ b/server/public/style.css
@@ -1,6 +1,6 @@
 /*
 Theme Name: Platz
-Theme URI: 
+Theme URI:
 Author: Dcrazed
 Author URI: https://dcrazed.com/
 Description: Platz is a free grid wordpress theme with responsive design for showing digital products, freebies similar to websites like freepik. Let your users upload images, content to your website and have their own author marketplace.
@@ -50,8 +50,8 @@ a {
     text-decoration:none;
 }
 
-ul { 
-    list-style-type: none; 
+ul {
+    list-style-type: none;
     margin:0;
     padding:0;
 }
@@ -116,6 +116,30 @@ body,html{
     opacity:0;
 }
 
+#wrapper-hero {
+  float: left;
+  width: 100%;
+  height: 200px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#wrapper-hero::before {
+  content: "";
+  width: 100%;
+  height: 200px;
+  position: absolute;
+  top: 125px;
+  left: 0;
+  z-index: -100;
+  background-image: url('/img/roma.jpg');
+  background-position: 0 -200px;
+  background-size: cover;
+  overflow: hidden;
+  opacity: 0.5;
+}
+
 #main-header{
     position:relative;
     width:1200px;
@@ -144,9 +168,9 @@ body,html{
 }
 
 #title-description {
-    text-transform: lowercase; 
-    font-size: 13px; 
-    letter-spacing: 0px; 
+    text-transform: lowercase;
+    font-size: 13px;
+    letter-spacing: 0px;
 }
 
 #stripes{
@@ -370,7 +394,7 @@ body,html{
     top: 0;
     padding: 10px;
     margin: 0;
-    line-height: 2.5; 
+    line-height: 2.5;
     color: white;
     transition: all 0.3s ease-in-out;
     -webkit-transition: all 0.3s ease-in-out;
@@ -420,7 +444,7 @@ body,html{
     width:100%;
     height:60px;
     background-color:#FFFFFF;
-    display: flex; 
+    display: flex;
 }
 
 #part-info{
@@ -452,32 +476,32 @@ body,html{
     color:#666;
     margin-left:10px;
     height:44px;
-    flex-direction: row; 
+    flex-direction: row;
 }
 
 .right-data {
-    display: flex; 
-    flex-direction: column; 
+    display: flex;
+    flex-direction: column;
 }
 
 #part-info h3 {
-    text-align: right; 
-    height: calc(100% / 2); 
+    text-align: right;
+    height: calc(100% / 2);
     line-height: 44px;
-    margin: 0px; 
-    color: #6CBF65; 
-    font-weight: 400; 
+    margin: 0px;
+    color: #6CBF65;
+    font-weight: 400;
 }
 
 #part-info h4 {
-    text-align: right; 
-    height: calc(100% / 2); 
-    line-height: 43px; 
-    margin: 0px; 
-    font-family: Helvetica, sans-serif; 
-    font-size: 12px; 
-    font-weight: 300; 
-    
+    text-align: right;
+    height: calc(100% / 2);
+    line-height: 43px;
+    margin: 0px;
+    font-family: Helvetica, sans-serif;
+    font-size: 12px;
+    font-weight: 300;
+
 }
 
 .part-info-image{
@@ -493,9 +517,9 @@ body,html{
     border-radius: 999px;}
 
 .job-image {
-    height: 180px !important; 
-    width: 240px; 
-    object-fit: cover; 
+    height: 180px !important;
+    width: 240px;
+    object-fit: cover;
 }
 
 /*----------------------------*/
@@ -522,8 +546,8 @@ body,html{
 
 .premium-ressource a,.themes a,.psd a,.ai a,.font a,.photo a{
     transition: all 0.2s ease-in-out;
-    -webkit-transition: all 0.2s ease-in-out; 
-    -moz-transition: all 0.2s ease-in-out; 
+    -webkit-transition: all 0.2s ease-in-out;
+    -moz-transition: all 0.2s ease-in-out;
     -o-transition: all 0.2s ease-in-out;
 }
 
@@ -657,7 +681,7 @@ body,html{
     border-radius: 5px;
     -moz-appearance: none;
     -webkit-appearance: none;
-    box-shadow: none; 
+    box-shadow: none;
     outline: 0;
     background: url(img/icon-newsletter.svg) no-repeat 10px 9px;
     margin-left:20px;
@@ -670,22 +694,22 @@ body,html{
 /*----------------------------*/
 
 .button {
-    padding: 6px; 
-    border: 1px solid white; 
-    text-transform: uppercase; 
-    font: 16px/1.6 Helvetica, sans-serif; 
-    width: 110px; 
-    text-align: center; 
-    border-radius: 5px; 
-    color: white; 
-    float: right; 
-    margin-top: 12px; 
-    margin-right: 60px; 
-    background-color: rgba(255, 255, 255, 0); 
+    padding: 6px;
+    border: 1px solid white;
+    text-transform: uppercase;
+    font: 16px/1.6 Helvetica, sans-serif;
+    width: 110px;
+    text-align: center;
+    border-radius: 5px;
+    color: white;
+    float: right;
+    margin-top: 12px;
+    margin-right: 60px;
+    background-color: rgba(255, 255, 255, 0);
 }
 
 .button:hover {
-    background-color: rgba(255, 255, 255, .3); 
+    background-color: rgba(255, 255, 255, .3);
 }
 
 /*----------------------------*/
@@ -710,7 +734,7 @@ body,html{
     border-radius: 5px;
     -moz-appearance: none;
     -webkit-appearance: none;
-    box-shadow: none; 
+    box-shadow: none;
     outline: 0;
     margin: 0;
     background: url(img/icon-search.svg) no-repeat 12px 7px;
@@ -876,7 +900,7 @@ body,html{
     #main-header,.navbar,.container,.container-footer,.thank,.oldnew,.copyright {
         width:585px;
         margin-left:-292.5px;
-    }   
+    }
     #wrapper-bouton-icon,#main_tip_search{
         display:none;
     }
@@ -897,7 +921,7 @@ body,html{
     #main-header,.navbar,.container,.container-footer,.thank,.oldnew,.copyright {
         width:455px;
         margin-left:-227.5px;
-    } 
+    }
     #wrapper-sorting{
         position:relative;
         width:300px;
@@ -940,4 +964,3 @@ body,html{
 @media only screen and (max-width: 320px) {
 
 }
-
