--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -37,14 +37,15 @@
 
 
         <div id="main_tip_search">
+
 			<form>
 				<input type="text" name="search" id="tip_search_input" list="search" autocomplete=off required>
 			</form>
 		</div>
-
-        <div id="stripes"></div>
         <a href="add-job.html"><button id="new-job" class="button">Add a job</button></a>
+        <a href="reward"><button style="width:140px; margin-right:10px" class="button" >Job reward</button></a>
     </div>
+
 </div>
 
 <!-- NAVBAR -->
