--- a/server/public/style.css
+++ b/server/public/style.css
@@ -128,16 +128,20 @@ body,html{
 #wrapper-hero::before {
   content: "";
   width: 100%;
-  height: 200px;
+  height: 270px;
   position: absolute;
-  top: 125px;
+  top: 0;
   left: 0;
   z-index: -100;
   background-image: url('/img/roma.jpg');
-  background-position: 0 -200px;
+  background-position: 0 -180px;
   background-size: cover;
   overflow: hidden;
   opacity: 0.5;
+}
+
+#location-text:focus {
+  outline: none;
 }
 
 #main-header{
