--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -50,6 +50,14 @@
 
 <!-- NAVBAR -->
 
+<div id="wrapper-hero">
+    <section class="work" style="width: 100%;max-width: 600px">
+      <figure class="white" style="max-width: 600px; width: 100%; margin: auto 0;">
+        <input id="location-text" type="text" placeholder="Roma, Italia" style="width: 100%; max-width: 560px; border: none; font-size: 20px; padding: 20px;" />
+      </figure>
+    </section>
+</div>
+
 <div id="wrapper-navbar">
 		<div class="navbar object">
     		<div id="wrapper-sorting">
@@ -118,14 +126,6 @@
 
 
 <!-- PORTFOLIO -->
-
-<div id="wrapper-hero">
-    <section class="work" style="width: 100%;max-width: 600px">
-      <figure class="white" style="max-width: 600px; width: 100%; margin: auto 0;">
-        <input id="location-text" type="text" placeholder="Roma, Italia" style="width: 100%; border: none; font-size: 20px; padding: 20px;" />
-      </figure>
-    </section>
-</div>
 
 
 	<div id="wrapper-container">
