--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -53,7 +53,7 @@
 <div id="wrapper-hero">
     <section class="work" style="width: 100%;max-width: 600px">
       <figure class="white" style="max-width: 600px; width: 100%; margin: auto 0;">
-        <input id="location-text" type="text" placeholder="Roma, Italia" style="width: 100%; max-width: 560px; border: none; font-size: 20px; padding: 20px;" />
+        <input id="location-text" type="text" placeholder="Rome, Metropolitan City of Rome, Italy" style="width: 100%; max-width: 560px; border: none; font-size: 20px; padding: 20px;" />
       </figure>
     </section>
 </div>
