Renamed stuff to other stuff and things

--- a/server/views/add_job.ejs
+++ b/server/views/add_job.ejs
@@ -168,9 +168,9 @@
                                     <span class="focus-input2" data-placeholder="CONTACT EMAIL"></span>
                                 </div>
 
-                                <div class="wrap-input2 validate-input" data-validate="Credit card is required">
+                                <div class="wrap-input2 validate-input" data-validate="Offered payment amount is required">
                                     <input class="input2" type="text" name="payment">
-                                    <span class="focus-input2" data-placeholder="CREDIT CARD NUMBER"></span>
+                                    <span class="focus-input2" data-placeholder="PAYMENT AMOUNT"></span>
                                 </div>
 
 
