--- a/server/public/job-review.css
+++ b/server/public/job-review.css
@@ -259,3 +259,9 @@
     margin-right:26px;
     display:block;
 }
+
+#resubmit-form {
+    display: flex; 
+    flex-direction: column; 
+    height: 30px; 
+}
