--- a/server/public/style.css
+++ b/server/public/style.css
@@ -950,3 +950,13 @@ body,html{
     font-size: 2em;
 }
 
+#account-a-tag{
+    color: white;
+    text-decoration: inherit;
+}
+
+
+
+.bottom-padding{
+    padding-bottom: 100px;
+}
